# biolab-cli

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  skills-lock.json
.github/workflows/: release.yml
docs/: 2026-05-21-安装指南.md  2026-05-21-项目更新方案.md  2026-05-25-CLI命令方案.md  2026-05-27-命令参考.md  BiolabCli-2026-05-27-项目种子API方案.md  biolab-cli-update-plan.md  command-reference.md  installation-guide.md  openapi-cli-command-plan.md  project-slug-seed-api-plan.md  命令参考.md  安装指南.md
skills/biolab-api/: SKILL.md
skills/biolab-evo/: SKILL.md
skills/biolab-experiment/: SKILL.md
skills/biolab-inventory/: SKILL.md
skills/biolab-lab/: SKILL.md
skills/biolab-orders/: SKILL.md
skills/biolab-project/: SKILL.md
skills/biolab-shared/: SKILL.md
skills/biolab-tashan/: SKILL.md
skills/biolab-task/: SKILL.md
skills/biolab-templates/: SKILL.md
skills/biolab-users/: SKILL.md
skills/scitex-admin/: SKILL.md
skills/scitex-error-report/: SKILL.md
skills/scitex-evo/: SKILL.md
skills/scitex-experiment/: SKILL.md
skills/scitex-inventory/: SKILL.md
skills/scitex-lab/: SKILL.md
skills/scitex-orders/: SKILL.md
skills/scitex-project/: SKILL.md
skills/scitex-shared/: SKILL.md
skills/scitex-tashan/: SKILL.md
skills/scitex-task/: SKILL.md
skills/scitex-templates/: SKILL.md
skills/scitex-users/: SKILL.md
src/: api_response.rs  auth.rs  client.rs  config.rs  error_history.rs  errors.rs  http.rs  lib.rs  main.rs  output.rs  types.rs
src/commands/: admin.rs  error_report.rs  inventory.rs  lab.rs  mod.rs  orders.rs  project.rs  (+6 more)
tests/: admin_task_types_live.rs
(+28 files in other folders)
