[package]
name = "biolab-cli"
version = "0.1.0"
edition = "2021"
description = "CLI client for the Biolab order system (primer synthesis + sequencing), inventory, and lab management"

[[bin]]
name = "biolab"
path = "src/main.rs"

[lib]
name = "biolab"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "6"
thiserror = "2"
colored = "3"
tiny_http = "0.12"
url = "2"
anyhow = "1"

[profile.release]
strip = true
lto = true
